Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113704

Sending certain key events to QQuickView showing a focused QtWebEngine causes crash

XMLWordPrintable

    • macOS, Windows
    • fb9bc02df (dev), fff2d969b (6.5), e08f9ee45 (6.6)

      Reproducer attached. Steps to reproduce:
      1. Run the sample and a WebEngineView with 4 arrows (Images with MouseArea above actually) is shown.
      2. Click the WebEngineView (not the arrows) so that WebEngineView is focused.
      3. Click left/right/down arrow will cause the program to crash. Very strangely, clicking up arro will not crash the program. Also, if not click WebEngineView first, clicking any arrow won't crash the program.

      Haven't tested all key events. But here are some other cases:
      Key events that crash the program: CapsLock, Backspace, Escape
      Key events that do not crash the program: Control, Shift, Alt
      So I don't see any pattern here. The key events are sent from settings.cpp and they can be modified to test other cases.

      Clicking arrows does nothing but call C++ APIs and send the corresponding key events to QQuickView. I have commented out all unnecessary codes in the original reproducer.

        1. Sample.zip
          22 kB
          Luqiao Chen
        For Gerrit Dashboard: QTBUG-113704
        # Subject Branch Project Status CR V

            michal Michal Klocek
            luqiaochen Luqiao Chen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change